examples/invalid/test13.alice

The looking-glass hatta () 
opened
  x was a number, y was a letter and z was a number of 'z' but
  x became 'a'.
  y became 10.
closed
